--- a/acceuil.html
+++ b/acceuil.html
@@ -55,13 +55,13 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img id="photo-prod" src="/img/img1.jpg" alt=""  height="300">
+                <img id="photo-prod" src="https://github.com/HanenH/CYCLONES/edit/main/img1.jpg" alt=""  height="300">
             </div>
             <div class="col-md-3">
-                <img id="photo-prod" src="/img/img2.jpg" alt=""  height="300">
+                <img id="photo-prod" src="https://github.com/HanenH/CYCLONES/edit/main/img2.jpg" alt=""  height="300">
             </div>
             <div class="col-md-3">
-                <img id="photo-prod" src="/img/img3.jpg" alt=""  height="300">
+                <img id="photo-prod" src="https://github.com/HanenH/CYCLONES/edit/main/img3.jpg" alt=""  height="300">
             </div>
         </div>
 
